# ai-financial-analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  SPEC.md  docker-compose.scaled.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  logging.py  main.py  worker.py
app/api/: __init__.py  dependencies.py  documents.py  middleware.py  ops.py  state.py
app/api/auth/: __init__.py  router.py  schemas.py  security.py  service.py
app/config/: __init__.py  errors.py  loader.py  models.py
app/db/: __init__.py  base.py  models.py
app/db/migrations/: env.py
app/db/migrations/versions/: 727d8aab64c3_baseline_schema.py
app/db/repositories/: __init__.py  base.py  documents.py  index_meta.py  refresh_tokens.py  users.py
app/domain/: __init__.py  chunking.py  schemas.py  validation.py
app/infra/: __init__.py  arq_queue.py  base.py  cache.py  events.py  factory.py  queue.py  redis_cache.py  redis_events.py
app/providers/: __init__.py  _gemini_errors.py  base.py  factory.py  retry.py
app/providers/embeddings/: __init__.py  fake.py  gemini.py
app/providers/llm/: __init__.py  fake.py  gemini.py
app/providers/vectorstores/: __init__.py  chroma.py  pgvector.py
app/services/: __init__.py  documents.py  jobs.py
app/storage/: __init__.py  base.py  factory.py  local.py  s3.py  signing.py
app/ui/: __init__.py
config/: dev.yaml  offline.yaml  scaled.yaml  test.yaml  test_documents.yaml  test_ratelimit.yaml
docker/: Caddyfile  entrypoint.sh
tests/contract/: conftest.py  test_embedding_contract.py  test_llm_contract.py
tests/evals/: README.md
tests/integration/: README.md
tests/unit/: test_auth_service.py  test_config.py  test_db_repositories.py  test_document_repository.py  test_documents_api.py  test_domain_chunking.py  test_domain_schemas.py  test_domain_validation.py  test_fake_providers.py  test_gemini_llm_adapter.py  test_health.py  test_infra_memory.py  test_main.py  test_migrations.py  test_provider_factory.py  test_storage_factory.py  test_storage_local.py  test_upload_service.py  test_vectorstore_chroma.py
