[project]
name = "ai-financial-analyzer"
version = "0.1.0"
description = "Production-ready RAG application for analyzing financial report PDFs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "structlog>=24.4",
    "python-multipart>=0.0.12",
    "jinja2>=3.1",
    "httpx>=0.27",
]

# Provider- and infra-specific dependencies land as their adapters do (P1/P2).
# Grouping them as extras keeps the default install light and the profiles honest.
[project.optional-dependencies]
gemini = ["google-genai>=0.3"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
offline = ["ollama>=0.3", "sentence-transformers>=3.0"]
parse = ["pymupdf>=1.24", "pdfplumber>=0.11"]
db = ["sqlalchemy>=2.0", "alembic>=1.13", "psycopg[binary]>=3.2", "pgvector>=0.3"]
queue = ["arq>=0.26", "redis>=5.0"]
storage = ["boto3>=1.35"]
auth = ["argon2-cffi>=23.1", "pyjwt>=2.9"]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pre-commit>=4.0",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]

# domain/ holds the pure logic that must never regress — keep it strictest.
[[tool.mypy.overrides]]
module = "app.domain.*"
disallow_any_explicit = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
